test/invalid-syntax/58219_undeclared_variable/undeclared_variable.agu
-- Author: 58219, Mariana Costa
-- Semantic error: undeclared type

let _ : Unit =
  let x : Int = 1;
  let z = x + y;
  z